--- a/src/main/resources/templates/score/index-student.html
+++ b/src/main/resources/templates/score/index-student.html
@@ -44,8 +44,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/scores/student">Điểm số</a>
+                        <a class="nav-link active" href="/scores/student">Điểm Số</a>
                     </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/timetable">Thời Khoá Biểu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/attendance/student">Điểm Danh</a>
+                    </li>
+                </ul>
                 </ul>
             </div>
         </div>
