--- a/src/main/resources/templates/teacher/details.html
+++ b/src/main/resources/templates/teacher/details.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="/">Trang Chủ</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/students">Học Sinh</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/classrooms">Lớp Học</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/timetable">Thời Khóa Biểu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/scores">Điểm Số</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/attendance">Điểm Danh</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/teachers">Giáo Viên</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container mt-4">
         <h1 class="mb-4">Chi tiết giáo viên</h1>
         
@@ -40,9 +70,6 @@
                 </div>
             </div>
             <div class="card-footer">
-                <a th:href="@{/teachers/edit/{id}(id=${teacher.id})}" class="btn btn-warning me-2">
-                    <i class="fas fa-edit"></i> Chỉnh sửa
-                </a>
                 <a th:href="@{/teachers}" class="btn btn-secondary">
                     <i class="fas fa-arrow-left"></i> Quay lại
                 </a>
